# NMM_LLM

./: .gitignore  AI_INTERNALS.md  HeuristicsV2-plan.md  HumanDB.md  Human_DB_integration.md  LICENSE  Learned_ai.md  PLAN.md  README.md  ai_todo.md  eval_results_sentinel_v2.json  install.ps1  main.py  plan_done.md  plan_todo.md  requirements.txt  requirements_learned_ai.txt  run_nmm.bat  run_nmm.sh  script_commands.md  sentinel_overlay_plan.md  todo.md  trajectory_db_redesign_plan.md
ai/: __init__.py  board_symmetry.py  coordinator.py  debriefer.py  endgame_db.py  endgame_recognizer.py  endgame_solved_db.py  fullgame_db.py  game_ai.py  heuristics.py  human_db.py  malom_db.py  mcts.py  memory_manager.py  mills_llm.py  move_guidance.py  neural_evaluator.py  opening_book.py  opening_recognizer.py  player_profile.py  ponder.py  starting_play.py  trajectory_db.py  transposition_table.py  value_net.py
configs/: sentinel_default.yaml  sentinel_light_retrain.yaml  sentinel_smoke.yaml  sentinel_stage1.yaml  sentinel_stage2.yaml  sentinel_stage3.yaml  sentinel_stage4.yaml  sentinel_stage5.yaml
data/: bad_moves.json  game_count.json  settings.json  value_net.npz
docs/: AI_INTERFACE_MAPPING.md  AI_INTERNALS.md  DATABASES.md  HeuristicsV2.md  HeuristicsV3a.md  HeuristicsV4.md  LEARNED_AI_ARCHITECTURE.md  MIGRATION_GUIDE.md  SENTINEL_ARCHITECTURE.md  TRAINING_GUIDE.md  frequency_gating.md  personality-v2-plan.md  sentinel_overview.md  (+3 more)
native/nmm_core/: Cargo.toml
native/nmm_core/src/: db_probe.rs  hash.rs  heuristics.rs  lib.rs  mills.rs  movegen.rs  search.rs  tactics.rs
(+666 files in other folders)
